<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">What\'s those flowers?</string>

    <string name="about">About</string>
    <string name="clear">Clear filter</string>
    <string name="language">Languages</string>
    <string name="en">English</string>
    <string name="locale_en">Locale in English!</string>
    <string name="sk">Slovenčina</string>
    <string name="locale_sk">Lokalizácia v slovenčine!</string>
    <string name="about_msg">&lt;b>ab:herbs&lt;/b> is an application.</string>

    <string name="color_of_flower">color of flowers</string>
    <string name="color_of_flower_message">What\'s color of flowers? Choose the closest one. Don\'t be afraid return back and change selection.</string>

    <string name="habitats">habitats</string>
    <string name="habitat_meadow">meadows or grasslands</string>
    <string name="habitat_garden">gardens or fields</string>
    <string name="habitat_wetland">moorlands or wetlands</string>
    <string name="habitat_forest">woodlands or forests</string>
    <string name="habitat_rock">rocks or mountains</string>
    <string name="habitat_tree">trees or bushes</string>
    <string name="habitat_message">What\'s around you? Identify plant\'s habitat.</string>

    <string name="number_of_petals">number of petals</string>
    <string name="nop_4">4 or less</string>
    <string name="nop_5">5</string>
    <string name="nop_many">more than 5</string>
    <string name="nop_bisymmetric">bisymmetric</string>
    <string name="number_of_petals_message">Is a flower bisymmetric? No? Then how many petals it has?</string>

    <string name="list_info">Pick one</string>

    <string name="plant_info">Info</string>
    <string name="plant_gallery">Gallery</string>
    <string name="plant_taxonomy">Taxonomy</string>

    <string name="plant_title">title</string>
    <string name="plant_flowers">Flowers</string>
    <string name="plant_inflorescences">Inflorescence</string>
    <string name="plant_fruits">Fruits</string>
    <string name="plant_leaves">Leaves</string>
    <string name="plant_inflorescence">Inflorescence</string>
    <string name="plant_color_of_flowers">Color of flowers</string>
    <string name="plant_number_of_petals">Number of petals</string>
    <string name="plant_sepal">Sepal</string>
    <string name="plant_leaf_shape">Leaf shape</string>
    <string name="plant_leaf_margin">Leaf margin</string>
    <string name="plant_leaf_venation">Leaf venation</string>
    <string name="plant_leaf_arrangement">Leaf arrangement</string>
    <string name="plant_stem">Stem</string>
    <string name="plant_root">Root</string>
    <string name="plant_habitat">Habitat</string>

    <string name="plant_domain">domain</string>
    <string name="plant_kingdom">kingdom</string>
    <string name="plant_subkingdom">subkingdom</string>
    <string name="plant_line">line</string>
    <string name="plant_branch">branch</string>
    <string name="plant_phylum">phylum</string>
    <string name="plant_class">class</string>
    <string name="plant_order">order</string>
    <string name="plant_family">family</string>
    <string name="plant_genus">genus</string>
    <string name="plant_species">species</string>
</resources>
