<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/count"
          app:showAsAction="always"
          app:actionLayout="@layout/filter_count"
          android:visible="true">
    </item>
    <item android:id="@+id/clear"
          android:title="@string/clear"
          app:showAsAction="never"
          android:orderInCategory="1">
    </item>
    <item android:id="@+id/language"
          android:title="@string/language"
          app:showAsAction="never"
          android:orderInCategory="2">
        <menu>
            <item android:id="@+id/en"
                  android:title="@string/en"
                  app:showAsAction="never"
                  android:orderInCategory="1" />
            <item android:id="@+id/sk"
                  android:title="@string/sk"
                  app:showAsAction="never"
                  android:orderInCategory="2" />
        </menu>
    </item>
    <item android:id="@+id/about"
          android:title="@string/about"
          app:showAsAction="never"
          android:orderInCategory="3">
    </item>
</menu>