<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res/sk.ab.herbs"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp">
        <sk.ab.commons.BaseImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ibMeadow"
                android:layout_gravity="center"
                android:text="@string/habitat_meadow"
                android:textColor="@color/MenuWhite"
                android:background="@drawable/meadow"
                custom:valueId="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp">
        <sk.ab.commons.BaseImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ibGarden"
                android:layout_gravity="center"
                android:text="@string/habitat_garden"
                android:background="@drawable/garden"
                android:textColor="@color/MenuWhite"
                custom:valueId="2"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp">
        <sk.ab.commons.BaseImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ibWetland"
                android:layout_weight="2"
                android:text="@string/habitat_wetland"
                android:background="@drawable/swamp"
                android:textColor="@color/MenuWhite"
                custom:valueId="3"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp">
        <sk.ab.commons.BaseImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ibForest"
                android:layout_weight="2"
                android:text="@string/habitat_forest"
                android:textColor="@color/MenuWhite"
                android:background="@drawable/forest"
                custom:valueId="4"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp">
        <sk.ab.commons.BaseImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ibRock"
                android:layout_weight="2"
                android:text="@string/habitat_rock"
                android:background="@drawable/mountain"
                android:textColor="@color/MenuWhite"
                custom:valueId="4"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="5dp">
        <sk.ab.commons.BaseImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ibTree"
                android:layout_weight="2"
                android:text="@string/habitat_tree"
                android:textColor="@color/MenuWhite"
                android:background="@drawable/tree"
                custom:valueId="5"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp" android:paddingRight="10dp">
        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/habitat_message"
                  android:lines="2"
                  android:textStyle="italic"
                  android:textSize="12dp"
                  android:gravity="center">

        </TextView>
    </LinearLayout>
</LinearLayout>