<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/plantInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView android:id="@+id/plant_title_value"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:textAppearance="@android:style/TextAppearance.Holo.Large"/>

    <FrameLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <ImageView android:id="@+id/plant_background"
                   android:layout_width="fill_parent" android:layout_height="fill_parent"
                   android:scaleType="fitEnd" android:alpha="0.5"/>

        <TableLayout android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow android:id="@+id/tableRow2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_inflorescence"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_inflorescence"/>

                <TextView android:id="@+id/plant_inflorescence_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_color_of_flower"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_color_of_flowers"/>

                <TextView android:id="@+id/plant_color_of_flower_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow4"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_numbers_of_petals"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_number_of_petals"/>

                <TextView android:id="@+id/plant_numbers_of_petals_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_sepal"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_sepal"/>

                <TextView android:id="@+id/plant_sepal_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow6"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_leaf_shape"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_leaf_shape"/>

                <TextView android:id="@+id/plant_leaf_shape_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow7"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_leaf_margin"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_leaf_margin"/>

                <TextView android:id="@+id/plant_leaf_margin_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow8"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_leaf_venation"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_leaf_venation"/>

                <TextView android:id="@+id/plant_leaf_venation_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow9"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_leaf_arrangement"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_leaf_arrangement"/>

                <TextView android:id="@+id/plant_leaf_arrangement_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow10"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_stem"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_stem"/>

                <TextView android:id="@+id/plant_stem_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow11"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_root"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_root"/>

                <TextView android:id="@+id/plant_root_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
            <TableRow android:id="@+id/tableRow12"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="5dip" >

                <TextView android:id="@+id/plant_habitat"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@android:style/TextAppearance.Small"
                          android:text="@string/plant_habitat"/>

                <TextView android:id="@+id/plant_habitat_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:paddingLeft="@dimen/attr_padding"
                          android:textAppearance="@android:style/TextAppearance.Medium"
                          android:textStyle="italic"/>
            </TableRow>
        </TableLayout>
    </FrameLayout>
</LinearLayout>